src/main/default/objects/V2_Gdrive__File__c/V2_Gdrive__File__c.object-meta.xml
<CustomObject>
    <label>File</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>