src/main/default/objects/V2_Gdrive__File__c/fields/V2_Gdrive__File_Id__c.field-meta.xml
<CustomField>
    <fullName>V2_Gdrive__File_Id__c</fullName>
    <label>File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>