src/main/default/objects/V2_Gdrive__File__c/fields/V2_Gdrive__File_URL__c.field-meta.xml
<CustomField>
    <fullName>V2_Gdrive__File_URL__c</fullName>
    <label>File URL</label>
    <type>Url</type>
</CustomField>