src/main/default/objects/V2_Gdrive__File__c/fields/V2_Gdrive__Package_Type__c.field-meta.xml
<CustomField>
    <fullName>V2_Gdrive__Package_Type__c</fullName>
    <label>Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S3</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>Google Drive</fullName>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>