src/main/default/objects/V2_Gdrive__File__c/fields/V2_Gdrive__Related_To__c.field-meta.xml
<CustomField>
    <fullName>V2_Gdrive__Related_To__c</fullName>
    <label>Related To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>